Fixed JUnit execution