@@ -5,6 +5,7 @@ import org.springframework.validation.BindingResult;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class InvalidDtoException extends RuntimeException{
     private List<String> messages = new ArrayList<>();
@@ -12,7 +13,7 @@ public class InvalidDtoException extends RuntimeException{
     public InvalidDtoException(BindingResult br) {
         messages = br.getAllErrors().stream()
                 .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public InvalidDtoException(String message) {
